force-app/main/default/objects/inspire1__ProjectLayoutManagementCS__c/inspire1__ProjectLayoutManagementCS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Will contains records which will be used to construct Project Layouts based on Project Type</description>
    <label>Project Layout Management</label>
</CustomObject>