force-app/main/default/objects/inspire1__ProjectLayoutManagementCS__c/fields/inspire1__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__ProfileId__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>