force-app/main/default/objects/inspire1__ProjectLayoutManagementCS__c/fields/inspire1__Project_Layout__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Layout__c</fullName>
    <inlineHelpText>Format : inspire1__Project__c-inspire1__&lt;layout name&gt;. If layout is changed, static resource id will need to be removed. Naming format is case sensitive</inlineHelpText>
    <label>Project Layout</label>
    <length>70</length>
    <type>Text</type>
</CustomField>