force-app/main/default/objects/inspire1__ProjectLayoutManagementCS__c/fields/inspire1__Project_Layout_JSON_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Layout_JSON_Record_Id__c</fullName>
    <inlineHelpText>Id of Static Resource when JSON is stored. Please set to empty when layout info is to be refreshed.</inlineHelpText>
    <label>Project Layout Static Resource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>