force-app/main/default/objects/inspire1__ProjectLayoutManagementCS__c/fields/inspire1__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Type__c</fullName>
    <inlineHelpText>Project Type. Value must exist in Type field under inspire planner Project Object</inlineHelpText>
    <label>Project Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>